<resources>
    <string name="app_name">storeItem</string>
    <string name="proxy_subscription">Proxy Subscription</string>
    <string name="_2">2 €</string>
    <string name="zzz_desc2">No entres en las Cavidades. Sí, ya lo sé. Las Cavidades están repletas de recursos etéreos, extraños objetos y ruinas de civilizaciones antiguas, con esta subsripción podras ptenciar a tu equipo y llevar con mas facilidad tus misiones</string>
    <string name="para_los_investigadores_de_cavidades">Para los investigadores de cavidades</string>
    <string name="a_adir_a_la_cesta">Añadir a la cesta</string>
    <string-array name="tipos_subs">
        <item>Estandar</item>
        <item>Premium</item>
        <item>Explorador experimentado</item>
    </string-array>
</resources>