<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/zzz_fotogramas" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="411dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#6881B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textViewProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proxy_subscription"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="587dp" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="587dp" />

        <TextView
            android:id="@+id/textViewDesc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/para_los_investigadores_de_cavidades"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="587dp" />

        <TextView
            android:id="@+id/textViewDesc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:justificationMode="inter_word"
            android:text="@string/zzz_desc2"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="587dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="584dp">


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a_adir_a_la_cesta" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>